Improve perf background and RSVP New lib appsfire

--- a/TestParse/en.lproj/Localizable.strings
+++ b/TestParse/en.lproj/Localizable.strings
@@ -6,6 +6,10 @@
 "PushNotifs_InvitationsOne" = "One event invitation awaiting for response";
 "PushNotifs_NewComment" = "%@ commented one of your photos";
 
+/* Local Notifs */
+"LocalNotifs_TomorrowGo" = "%@ will take place tomorrow, get the last infos";
+"LocalNotifs_TommorowMaybe" = "%@ will take place tomorrow, confirm your presence";
+"LocalNotifs_SameDay" = "%@ has started! Take a look to the photos or add yours!";
 
 /* UITabBar */
 "UITabBar_Title_FirstPosition" = "Events";
@@ -164,6 +168,9 @@
 "PhotosCollectionViewController_AutoImport" = "Import Automatically";
 "PhotosCollectionViewController_TimeConjonction" = "at";
 "PhotosCollectionViewController_NbPhotos" = "%i Photos";
+"PhotosCollectionViewController_AddCalendar" = "Add to the calendar";
+"PhotosCollectionViewController_ShareMessageMultiple" = "Find here the %i photos taken during %@ : %@";
+"PhotosCollectionViewController_ShareMessageFew" = "Find here all the photos taken during %@ : %@";
 
 
 
@@ -266,6 +273,13 @@
 "SettingsViewController_disconnect" = "Logout";
 "SettingsViewController_Thanks" = "Thanks";
 "SettingsViewController_myStats" = "My Statistics";
+"SettingsViewController_rateApp" = "Rate the app";
+"SettingsViewController_ShareApp" = "This is an app that will revolutionize the way you manage your Facebook events!\n Download it, it's free!\n http://woovent.com/gettheapp/";
+"SettingsViewController_ShareAppTitle" = "An app for your Facebook events";
+"SettingsViewController_TitleSectionOne" = "Spread the word!";
+"SettingsViewController_TitleSectionTwo" = "Notifications";
+"SettingsViewController_TitleSectionThree" = "For Woovent";
+"SettingsViewController_TitleSectionFour" = "And More";
 
 //// LoginViewController ///
 "LoginViewController_CGU" = "By connecting myself I accept Terms of Service";
@@ -276,7 +290,7 @@
 
 /// LandingViewController ///
 "LandingViewController_analyzeLoading" = "We're cooking up some great stats for you...";
-"LandingViewControllerWinner_messageForFacebook" = "%i Facebook event invitations! Anyone to challenge me?!\nCome and have a try on  Woovent app : http://www.woovent.com";
+"LandingViewControllerWinner_messageForFacebook" = "%i Facebook event invitations! Anyone to challenge me?!\nCome and have a try on  Woovent app : http://www.woovent.com #woovent";
 "LandingViewControllerWinner_congratsLabel1" = "Wowww!";
 "LandingViewControllerWinner_congratsLabel2" = "Pas mal !";
 "LandingViewControllerWinner_congratsLabel3" = "Peut mieux faire !";
